--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Viitorsoares/backend-modulo02#readme",
   "dependencies": {
+    "express": "^4.18.3",
     "mysql2": "^3.9.2"
   }
 }
